--- a/records.css
+++ b/records.css
@@ -18,7 +18,13 @@
   padding-left: 20px;
 }
 
+.records th:last-child,
 .records td:last-child {
   padding: 0;
-  min-width: 130px;
+  min-width: 150px;
+  text-align: center;
+}
+
+.records tr:hover {
+  background-color: #b2bebf;
 }
