--- a/style.css
+++ b/style.css
@@ -31,3 +31,11 @@ main {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 3px;
 }
+
+footer {
+  width: 100;
+  text-align: center;
+  font-weight: 200;
+  font-style: italic;
+  padding: 20px;
+}
