--- a/modal.css
+++ b/modal.css
@@ -27,7 +27,7 @@
 
 .modal-form {
   display: flex;
-  justify-content: space-betweens;
+
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
@@ -41,6 +41,7 @@
 }
 
 .modal-header {
+  position: relative;
   display: flex;
   height: 40px;
   line-height: 40px;
@@ -53,6 +54,7 @@
 }
 
 .modal-close {
+  position: absolute;
   display: block;
   width: 40px;
   height: 40px;
@@ -78,4 +80,12 @@
 
 .modal-field:focus {
   border: 2px solid #159a9c;
+}
+@media (max-width: 780px) {
+  .modal-content {
+    width: 90vw;
+  }
+  .modal-field {
+    width: 100%;
+  }
 }
