--- a/records.css
+++ b/records.css
@@ -6,6 +6,7 @@
 
 .records th {
   height: 50px;
+  min-width: 150px;
   background-color: #002333;
   color: #fff;
   padding-left: 20px;
@@ -14,6 +15,7 @@
 }
 
 .records td {
+  min-width: 150px;
   height: 50px;
   padding-left: 20px;
 }
