--- a/button.css
+++ b/button.css
@@ -24,3 +24,16 @@
 .button.delet {
   background-color: #bd2a2e;
 }
+
+@media (max-width: 480px) {
+  .button.mobile {
+    color: transparent;
+    font-size: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: fixed;
+    top: 90vh;
+    left: 80vh;
+  }
+}
