ajuste de rotas arquivos css

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+@import url(./button.css);
+@import url(./header-title.css);
+@import url(./modal.css);
+@import url(./records.css);
+
+
 * {
   margin: 0;
   padding: 0;
