--- a/styles/modal.css
+++ b/styles/modal.css
@@ -27,7 +27,6 @@
 
 .modal-form {
   display: flex;
-
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
@@ -37,6 +36,7 @@
 .modal-footer {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 10px;
 }
 
