--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ body {
 
 header {
   flex-wrap: wrap;
-  background-color: #002333;
+  background-color: #415a77;
   height: 70px;
   text-align: center;
   justify-content: center;
@@ -35,9 +35,9 @@ main {
   margin: 5vh auto;
   padding: 20px;
   gap: 20px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 3px;
+  border-radius: 6px;
   overflow: scroll;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 footer {
