--- a/styles/records.css
+++ b/styles/records.css
@@ -7,7 +7,7 @@
 .records th {
   height: 50px;
   min-width: 150px;
-  background-color: #002333;
+  background-color: #415a77;
   color: #fff;
   padding-left: 20px;
   font-size: 1.2rem;
